mainsite/static/www/css/mainstyle.scss
/* =================================================================== */
/**
 * Project: SPE.org Homepage
 * Author: JD Toony
 * Date: 2/28/16
 * Time: 12:38 9M
 * Copyright 2016 Society of Petroleum Engineers, all rights reserved
 * style="display:block;z-index:9950;"
 */
/* =================================================================== */

@import 'vars';

body {
    font-family:            $font-main;
  //font-size:              14px !important;
    background-color:     $col-pagegrey;
}
* {
  -webkit-border-radius:  0 !important;
  -moz-border-radius:     0 !important;
  border-radius:          0 !important;
}
.row {
    margin-right:         0;
    margin-left:          0;
}
a {
  &:hover {
    text-decoration:      none;
  }
}

/* ************************ */
// GLOBAL
@import 'yamm';
@import 'header';
@import 'footer';
@import 'content';
@import 'tiles';

/* *************************************** */
/* *************************************** */

.redText {
    color:            $col-red;
}
.greyback {
  background-color:   $col-lightgrey;
}
.navbar-collapse {
    padding-left:     0;
}
.pinkBorder {
    border:           1px solid pink;
}
.padZero {
  padding:            0;
}
.margZero {
  margin:             0;
}
.sponsored {
  padding:            5px 10px;
  background-color:   $col-yellow;
  color:              $col-black;
  font-weight:        $font-bold;
  font-size:          12px;
  letter-spacing:     2px;
}
.tile-editorial {
  .row {
    margin:             10px 0;
    padding-bottom:     10px;
    border-bottom: 1px solid #f1f2f7;
  }
}
.sideListTitle {
  font-size:            14px;
  font-weight:          $font-regular;
  //line-height:          18px;

  a {
    //color:              $col-darkgrey;
    margin:             20px 0;
    //margin:               10px 0 10px 0;
    //padding:              10px 0 10px 0;
  }

  a:hover {
    color:              $col-speblue2;
  }
}
.logo-wrap img {
  max-width: 335px;

}
h2 {
  font-size:          30px;
  font-weight:        $font-bold;
}
h3 {
  font-size:          20px;
  font-weight:        $font-bold;
}
h4 {
  font-size:          16px;
  font-weight:        $font-bold;
}

.sideListTitle2 a {
  color:              $col-hoverblue !important;

  &:hover {
    color:            $col-steelgrey !important;
    //background-color: $col-lightgrey;
  }
}


.see-all-div {
  margin:             15px 0;
  padding:            10px 0 0 10px;
  border-top:         1px solid $col-steelgrey;
}
.see-all {
  font-size:          15px;
  font-weight:        $font-bold;
  color:              $col-speblue;

  &:hover {
    color:            $col-steelgrey;
  }

  i {
    margin-left:      25px;
  }
}
.morepromo {
  background-color:   $col-white;
  padding:            0;
  margin:             0;
}
.see-all-div-promo {
  //margin:             -15px 0 0 0;
  padding:            10px;
  //border-top:         1px solid $col-steelgrey;
}
.see-all-promo {
  font-size:          15px;
  font-weight:        $font-bold;
  color:              $col-speblue;

  &:hover {
    color:            $col-steelgrey;
  }

  i {
    margin-left:      25px;
  }
}

